--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="container">
 <div class="card-white" id="introduction">
-  <h1>Hello, I'm Maria 🤗</h1>
+  <h1>Hello, I'm Maria</h1>
   <img src="images/profile.jpg" alt="Maria" id="profile-pic">
 
   <p>I love travelling, animals and connecting with nature. I enjoy learning new things and expanding my horizons. My current project is building an app and I am learning the basics useful for it at Le Wagon.</p>
